# synacor_challenge

./: .gitmodules  Cargo.toml  README.md  arch-spec  beach.cp  beachnorths.cp  binary_reverse.txt  center.cp  find_way.py  game_log.txt  journal.cp  journal.txt  map.md  orb.cp  orbjournal.cp  solution.md
src/: async_vm.rs  main.rs  op_parser.rs  reverse_engineer.rs  vm.rs  vm_runner.rs
teleporter_machine/: Cargo.toml
teleporter_machine/src/: main.rs
