[package]
name = "synacor_challenge"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.68"
ctrlc = "3.2.4"
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.91"
ux = { path = "./uX", features=["std"] }

[workspace]
members = [
	".",
	"uX"
]
