[package]
name = "synacor_challenge"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.68"
bytemuck = "1.12.3"
clap = { version = "4.1.1", features = ["derive"] }
ctrlc = "3.2.4"
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.91"
threadpool = "1.8.1"
ux = { path = "./uX", features=["std"] }

[workspace]
members = [
	".",
	"uX",
	"teleporter_machine"
]
